Update `java` source launcher command